// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateInput has custom yearMax and yearMin 1`] = `
<div
  className="ds-l-form-row ds-u-align-items--end"
>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    fieldClassName="ds-c-field--month"
    inputRef={[Function]}
    label="Month"
    labelClassName="ds-c-datefield__label"
    name="month"
    numeric={true}
  />
  <span
    className="ds-c-datefield__separator"
  >
    /
  </span>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    fieldClassName="ds-c-field--day"
    inputRef={[Function]}
    label="Day"
    labelClassName="ds-c-datefield__label"
    name="day"
    numeric={true}
  />
  <span
    className="ds-c-datefield__separator"
  >
    /
  </span>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    fieldClassName="ds-c-field--year"
    inputRef={[Function]}
    label="year"
    labelClassName="ds-c-datefield__label"
    name="Year"
    numeric={true}
  />
</div>
`;

exports[`DateInput has invalid day 1`] = `
<div
  className="ds-l-form-row ds-u-align-items--end"
>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    fieldClassName="ds-c-field--month"
    inputRef={[Function]}
    label="Month"
    labelClassName="ds-c-datefield__label"
    name="month"
    numeric={true}
  />
  <span
    className="ds-c-datefield__separator"
  >
    /
  </span>
  <TextField
    aria-describedby="1"
    aria-invalid={true}
    className="ds-l-col--auto"
    fieldClassName="ds-c-field--day ds-c-field--error"
    inputRef={[Function]}
    label="Day"
    labelClassName="ds-c-datefield__label"
    name="day"
    numeric={true}
  />
  <span
    className="ds-c-datefield__separator"
  >
    /
  </span>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    fieldClassName="ds-c-field--year"
    inputRef={[Function]}
    label="year"
    labelClassName="ds-c-datefield__label"
    name="Year"
    numeric={true}
  />
</div>
`;

exports[`DateInput has invalid month 1`] = `
<div
  className="ds-l-form-row ds-u-align-items--end"
>
  <TextField
    aria-describedby="1"
    aria-invalid={true}
    className="ds-l-col--auto"
    fieldClassName="ds-c-field--month ds-c-field--error"
    inputRef={[Function]}
    label="Month"
    labelClassName="ds-c-datefield__label"
    name="month"
    numeric={true}
  />
  <span
    className="ds-c-datefield__separator"
  >
    /
  </span>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    fieldClassName="ds-c-field--day"
    inputRef={[Function]}
    label="Day"
    labelClassName="ds-c-datefield__label"
    name="day"
    numeric={true}
  />
  <span
    className="ds-c-datefield__separator"
  >
    /
  </span>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    fieldClassName="ds-c-field--year"
    inputRef={[Function]}
    label="year"
    labelClassName="ds-c-datefield__label"
    name="Year"
    numeric={true}
  />
</div>
`;

exports[`DateInput has invalid year 1`] = `
<div
  className="ds-l-form-row ds-u-align-items--end"
>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    fieldClassName="ds-c-field--month"
    inputRef={[Function]}
    label="Month"
    labelClassName="ds-c-datefield__label"
    name="month"
    numeric={true}
  />
  <span
    className="ds-c-datefield__separator"
  >
    /
  </span>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    fieldClassName="ds-c-field--day"
    inputRef={[Function]}
    label="Day"
    labelClassName="ds-c-datefield__label"
    name="day"
    numeric={true}
  />
  <span
    className="ds-c-datefield__separator"
  >
    /
  </span>
  <TextField
    aria-describedby="1"
    aria-invalid={true}
    className="ds-l-col--auto"
    fieldClassName="ds-c-field--year ds-c-field--error"
    inputRef={[Function]}
    label="year"
    labelClassName="ds-c-datefield__label"
    name="Year"
    numeric={true}
  />
</div>
`;

exports[`DateInput is disabled 1`] = `
<div
  className="ds-l-form-row ds-u-align-items--end"
>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    disabled={true}
    fieldClassName="ds-c-field--month"
    inputRef={[Function]}
    label="Month"
    labelClassName="ds-c-datefield__label"
    name="month"
    numeric={true}
  />
  <span
    className="ds-c-datefield__separator"
  >
    /
  </span>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    disabled={true}
    fieldClassName="ds-c-field--day"
    inputRef={[Function]}
    label="Day"
    labelClassName="ds-c-datefield__label"
    name="day"
    numeric={true}
  />
  <span
    className="ds-c-datefield__separator"
  >
    /
  </span>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    disabled={true}
    fieldClassName="ds-c-field--year"
    inputRef={[Function]}
    label="year"
    labelClassName="ds-c-datefield__label"
    name="Year"
    numeric={true}
  />
</div>
`;

exports[`DateInput is inversed 1`] = `
<div
  className="ds-l-form-row ds-u-align-items--end"
>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    fieldClassName="ds-c-field--month"
    inputRef={[Function]}
    inversed={true}
    label="Month"
    labelClassName="ds-c-datefield__label"
    name="month"
    numeric={true}
  />
  <span
    className="ds-c-datefield__separator"
  >
    /
  </span>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    fieldClassName="ds-c-field--day"
    inputRef={[Function]}
    inversed={true}
    label="Day"
    labelClassName="ds-c-datefield__label"
    name="day"
    numeric={true}
  />
  <span
    className="ds-c-datefield__separator"
  >
    /
  </span>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    fieldClassName="ds-c-field--year"
    inputRef={[Function]}
    inversed={true}
    label="year"
    labelClassName="ds-c-datefield__label"
    name="Year"
    numeric={true}
  />
</div>
`;

exports[`DateInput renders with all defaultProps 1`] = `
<div
  className="ds-l-form-row ds-u-align-items--end"
>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    fieldClassName="ds-c-field--month"
    inputRef={[Function]}
    label="Month"
    labelClassName="ds-c-datefield__label"
    name="month"
    numeric={true}
  />
  <span
    className="ds-c-datefield__separator"
  >
    /
  </span>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    fieldClassName="ds-c-field--day"
    inputRef={[Function]}
    label="Day"
    labelClassName="ds-c-datefield__label"
    name="day"
    numeric={true}
  />
  <span
    className="ds-c-datefield__separator"
  >
    /
  </span>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    fieldClassName="ds-c-field--year"
    inputRef={[Function]}
    label="year"
    labelClassName="ds-c-datefield__label"
    name="Year"
    numeric={true}
  />
</div>
`;
